--- a/src/app/components/paciente/lista-pacientes.component.html
+++ b/src/app/components/paciente/lista-pacientes.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12">
             <div class="table-responsive-lg">
                 <table class="table table-bordered">
                     <thead class="table-dark">
@@ -16,7 +16,6 @@
                             <th>Nombre</th>
                             <th>Número de contacto</th>
                             <th>Afiliación de salud</th>
-                            <th>Atenciones</th>
                             <th>Opciones</th>
                         </tr>
                     </thead>
@@ -25,10 +24,6 @@
                             <td>{{paciente.nombre + " " + paciente.apellido}}</td>
                             <td>{{paciente.telefono}}</td>
                             <td>{{paciente.afiliacionSalud}}</td>
-                            <td>
-                                <button (click)="getAtencionesDeUnPaciente(paciente)" class="btn btn-primary"
-                                    type="button">Ver atenciones</button>
-                            </td>
                             <td>
                                 <div class="row">
                                     <button [routerLink]="['../../', paciente.idPaciente]" class="btn btn-primary" type="button">Ver</button>
