--- a/src/app/components/paciente/paciente-form/paciente-form.component.css
+++ b/src/app/components/paciente/paciente-form/paciente-form.component.css
@@ -27,16 +27,10 @@
     border: 2px solid green;
 }
 
-button, button:disabled, button:focus {
+button, button:hover, button:disabled, button:focus {
     margin-top: 30px;
     background-color: #284b63;
     border-color: #284b63;
-}
-
-button:hover {
-    background-color: #d9d9d9;
-    border-color: #d9d9d9;
-    color: #353535;
 }
 
 i, span {
