--- a/src/app/components/paciente/lista-pacientes.component.html
+++ b/src/app/components/paciente/lista-pacientes.component.html
@@ -4,7 +4,7 @@
             <h1>Pacientes</h1>
         </div>
         <div class="col-lg-6" id="search-by-name-input">
-            <app-busqueda-paciente (searchPatientEvent)="getPatientsByName($event)"></app-busqueda-paciente>
+            <app-busqueda-paciente (searchPatientEvent)="getPatients($event)"></app-busqueda-paciente>
         </div>
     </div>
     <div class="row">
