--- a/src/app/components/busqueda/busqueda-pacientes/busqueda-paciente.component.css
+++ b/src/app/components/busqueda/busqueda-pacientes/busqueda-paciente.component.css
@@ -1,12 +1,6 @@
-button, button:disabled, button:focus {
+button, button:disabled, button:focus, button:hover {
     background-color: #284b63;
-    border-color: #284b63;
-}
-
-button:hover {
-    background-color: #d9d9d9;
-    border-color: #d9d9d9;
-    color: #353535;
+    border-color: #284b63;  
 }
 
 i, span {
