--- a/src/app/components/hora-atencion/agenda/horario/horario.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/horario.component.html
@@ -1,6 +1,6 @@
 <div class="container" id="main">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 text-center">
             <div class="table-responsive-lg">
                 <table class="table table-bordered">
                     <thead class="table-dark">
@@ -16,12 +16,15 @@
                             <td>{{hora.paciente.nombre + " " + hora.paciente.apellido}}</td>
                             <td>
                                 <div class="row">
-                                    <button (click)="verDetalle(hora)" data-toggle="modal" data-target="#detalleHora"
-                                        class="btn btn-primary" type="button">Ver detalle</button>
-                                    <button [routerLink]="['/nuevo-horario', hora.idAtencion]" class="btn btn-primary"
-                                        type="button">Modificar</button>
-                                    <button (click)="eliminarHorario(hora.idAtencion)" class="btn btn-primary"
-                                        type="button">Eliminar</button>
+                                    <div class="col-lg-12 text-center">
+                                        <button (click)="verDetalle(hora)" data-toggle="modal"
+                                            data-target="#detalleHora" class="btn btn-primary" type="button">Ver
+                                            detalle</button>
+                                        <button [routerLink]="['/nuevo-horario', hora.idAtencion]"
+                                            class="btn btn-primary" type="button">Modificar</button>
+                                        <button (click)="eliminarHorario(hora.idAtencion)" class="btn btn-primary"
+                                            type="button">Eliminar</button>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
@@ -91,21 +94,25 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <h5 *ngIf="horario.confirmaAsistencia == false">
-                                El paciente no ha confirmado su asistencia aún
+                            <h5 *ngIf="horario.confirmaAsistencia == 0">
+                                ¿El paciente confirmó previamente su asistencia?
                             </h5>
-                            <h5 *ngIf="horario.confirmaAsistencia == true">
+                            <i class="bi bi-check-circle-fill icon-confirm" *ngIf="horario.confirmaAsistencia == 1"></i>
+                            <h5 *ngIf="horario.confirmaAsistencia == 1">
                                 ¡El paciente confirmó su asistencia!
+                            </h5>
+                            <i class="bi bi-x-circle-fill icon-fail" *ngIf="horario.confirmaAsistencia == -1"></i>
+                            <h5 *ngIf="horario.confirmaAsistencia == -1">
+                                El paciente no confirmó su asistencia
                             </h5>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <h6 *ngIf="horario.confirmaAsistencia == false">
-                                ¿Desea confirmarla?
-                            </h6>
-                            <button (click)="confirmaAsistencia()" *ngIf="horario.confirmaAsistencia == false"
-                                class="btn btn-success confirmacion" type="button">Sí</button>
+                        <div class="col-lg-12 text-center" *ngIf="horario.confirmaAsistencia == 0">
+                            <button (click)="confirmaAsistencia(1)" class="btn btn-success confirmacion"
+                                type="button">Sí</button>
+                            <button (click)="confirmaAsistencia(-1)" class="btn btn-success no-confirma"
+                                type="button">No</button>
                         </div>
                     </div>
                 </div>
@@ -113,18 +120,28 @@
                 <!-- Registro de asistencia del paciente -->
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-12 text-center" *ngIf="displayAsistenciaPendiente">
-                            <h5>Asistencia pendiente</h5>
+                        <div class="col-lg-12 text-center" *ngIf="horario.asistencia == 0">
+                            <h5>La asistencia del paciente no ha sido registrada aún</h5>
                         </div>
-                        <div class="col-lg-12 text-center" *ngIf="!displayAsistenciaPendiente && !horario.asistencia">
-                            <h5>¿Desea registrar la asistencia del paciente?</h5>
+                        <div class="col-lg-12 text-center" *ngIf="horario.asistencia == 0">
+                            <h5>¿El paciente asiste a su hora de atención?</h5>
                         </div>
-                        <div class="col-lg-12 text-center" *ngIf="!displayAsistenciaPendiente && !horario.asistencia">
-                            <button (click)="asistencia(true)" class="btn btn-success confirmacion" type="button">El paciente asiste a su sesión</button>
-                            <button (click)="asistencia(false)" class="btn btn-success no-confirma" type="button">El paciente no asiste a su sesión</button>
+                        <div class="col-lg-12 text-center" *ngIf="horario.asistencia == 0">
+                            <button (click)="asistencia(1)" class="btn btn-success confirmacion" type="button">El
+                                paciente asiste a su sesión</button>
+                            <button (click)="asistencia(-1)" class="btn btn-success no-confirma" type="button">El
+                                paciente no asiste a su sesión</button>
                         </div>
-                        <div class="col-lg-12 text-center" *ngIf="!displayAsistenciaPendiente && horario.asistencia">
-                            <h5><i class="bi bi-check-circle-fill"></i>El paciente sí asistió a su sesión de terapia</h5>
+                        <div class="col-lg-12 text-center" *ngIf="horario.asistencia == 1">
+                            <i class="bi bi-check-circle-fill icon-confirm"></i>
+                            <h5>¡El paciente sí asistió a su sesión de
+                                terapia!
+                            </h5>
+                        </div>
+                        <div class="col-lg-12 text-center" *ngIf="horario.asistencia == -1">
+                            <i class="bi bi-x-circle-fill icon-fail"></i>
+                            <h5>El paciente no asistió a su sesión de terapia
+                            </h5>
                         </div>
                     </div>
                 </div>
